fix picture alignment on survival page.

--- a/survival.css
+++ b/survival.css
@@ -11,7 +11,7 @@ html {
       color: yellow
     }
 
-    .wrapimage{ float:right;
+    .wrapimage{ align-items: center
               margin:10px;}
 
     header {
